# Glast-Tracker-CosmicRayDistribution

./: .gitignore  Doxyfile  README.md
.github/workflows/: CI.yml  DocBuild.yml
CMEPDA-GLAST/: .~lock.mainpage.doc#  CMakeLists.txt  CreateTree.cpp  Interface.py  Makefile  OldThetaDist.root  ThetaDist.root  chi2Dist.root  mainpage.doc  oldchi2Dist.root  rootlogon.C  utils.py
CMEPDA-GLAST/Core/: CMakeCache.txt  Makefile  cmake_install.cmake
CMEPDA-GLAST/Core/CreateTree/: CreateTree.cpp  PlotClusterResults.cpp
CMEPDA-GLAST/Core/DataAnalysisMacros/: CompareDistributions.cpp  ExtractDistributions.cpp
CMEPDA-GLAST/Core/Headers/: ClassEvento.h  Evento.h  EventoTrack.h  GeneralUtils.h  Track.h  UtilsCreateTree.h  UtilsMC.h  UtilsRectifyTracks.h  UtilsRetina.h
CMEPDA-GLAST/Core/LibrariesSources/: GeneralUtils.cpp  UtilsCreateTree.cpp  UtilsMC.cpp  UtilsRectifyTracks.cpp  UtilsRetina.cpp
CMEPDA-GLAST/Core/Montecarlo/: MonteCarlo.cpp  MonteCarloGenerazioneDati.cpp  MonteCarloGenerazioneDati_cpp.d  MonteCarloGenerazioneDati_cpp_ACLiC_dict.cxx_tmp_19557  MonteCarloGenerazioneDati_cpp_ACLiC_dict_rdict.pcm  MonteCarlo_cpp.d  MonteCarlo_cpp_ACLiC_dict_rdict.pcm
CMEPDA-GLAST/Core/TrackingRetina/: Mind.py  RectifyTracks.cpp  RectifyTracks_cpp.d  RectifyTracks_cpp_ACLiC_dict_rdict.pcm  Retina.cpp  Retina_cpp.d  Retina_cpp_ACLiC_dict.cxx_tmp_8227  Retina_cpp_ACLiC_dict.cxx_tmp_9774  Retina_cpp_ACLiC_dict_rdict.pcm  UnifyTree.cpp
CMEPDA-GLAST/Core/UtilsMacros/: CompareDistributions.cpp  ExtractDistributions.cpp  Plot.cpp  TrackSee.cpp
CMEPDA-GLAST/CreateTree/: ClassEvento.h  CreateTree.cpp  CreateTree_cpp.d  CreateTree_cpp_ACLiC_dict_rdict.pcm  Evento.h
CMEPDA-GLAST/Data/Datalif/: README.md
CMEPDA-GLAST/Data/MCSimulations/: MCAzimuthExpectedDistribution.root  MCAzimuthGeneratedDistribution.root  MCZenithExpectedDistribution.root  MCZenithGeneratedDistribution.root
CMEPDA-GLAST/Data/MCSimulations/TestingRetinaAlgorithm/: MCDist.root  MCReconstructed.root  ReconstructedAzimuthDistribution.root  ReconstructedNXTracksvsNYTracks.root  ReconstructedZenithDistribution.root  SampleAzimuthTest.root  SampleZenithTest.root
CMEPDA-GLAST/Data/ResultsImages/: MeasuredAzimuthDistribution.root  MeasuredNXTracksvsNYTracks.root  MeasuredZenithDistribution.root
CMEPDA-GLAST/GeneralLibraries/: GeneralUtils.cpp  GeneralUtils.h
CMEPDA-GLAST/TrackingRetina/: ClassEvento.h  Mind.py  Retina.cpp  UtilsRetina.cpp  UtilsRetina.h
docs/html/: ClassEvento_8h_source.html  CreateTree_8cpp.html  Evento_8h.html  Evento_8h_source.html  UtilsCreateTree_8cpp.html  UtilsCreateTree_8h_source.html  annotated.html  classEvento-members.html  classEvento.html  classEventoTrack-members.html  classEventoTrack.html  classTrack-members.html  classTrack.html  classes.html  doxygen_crawl.html  files.html  (+22 more)
tests/: TestDataSample.lif  TestUtilsCreateTree.cpp  TestUtilsMC.cpp  tests.cpp
(+211 files in other folders)
